--- a/main-page/main_page.html
+++ b/main-page/main_page.html
@@ -108,9 +108,9 @@
         <div class="wrapper__why-we">
             <div>Why we?</div>
             <div class="wrapper__block-1">
-                <div>Опытная <span class="color-for-team">команда</span></div>
+                <div class="block-1__color">Опытная команда</div>
                 <ul class="ul-list">
-                    <li>Более <span class="color-for-team">100+</span> успешных<br>проектов</li>
+                    <li class="block-1__color">Более 100+ успешных<br>проектов</li>
                 </ul>
             </div>
         </div>
