--- a/main-page/main_page.html
+++ b/main-page/main_page.html
@@ -104,15 +104,45 @@
         </span>
     </div>
     <div class="wrapper">
-        <img src="../images/image.png" class="img"></img>
+        <img src="../images/image.png" class="img" alt="main-page"></img>
         <div class="wrapper__why-we">
-            <div>Why we?</div>
+            <div class="why-we__answer">Why we?</div>
             <div class="wrapper__block-1">
-                <div class="block-1__color">Опытная команда</div>
-                <ul class="ul-list">
-                    <li class="block-1__color">Более 100+ успешных<br>проектов</li>
-                </ul>
+                <div></div>
+                <div class="block-1">
+                    <div class="block-1__color">Опытная команда</div>
+                    <ul class="ul-list">
+                        <li class="block-1__color">Более 100+ успешных<br>проектов</li>
+                    </ul>
+                </div>
             </div>
+            <div class="wrapper__block-2">
+                <div></div>
+                <div class="block-2">
+                    <div class="block-2__color">Офис в центре Минска</div>
+                    <ul class="ul-list">
+                        <li class="block-2__color">У нас есть даже спортивный<br>зал!</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="wrapper__block-3">
+                <div></div>
+                <div class="block-3">
+                    <div class="block-3__color">Дружная команда</div>
+                    <ul class="ul-list">
+                        <li class="block-3__color">Мы помогаем друг другу!</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="img-first-line">
+        <img src="../images/image3.png" alt="line" class="img-first-line__img-line">
+    </div>
+    <div class="about-us">
+        <span class="about-us__color-for-about-us">About </span>Us<br><hr style="border: 1px solid red;">
+        <div class="about-us__padding">
+            Our <span class="about-us__color-for-about-us">team</span>
         </div>
     </div>
 </body>
