--- a/main-page/main_page.html
+++ b/main-page/main_page.html
@@ -140,9 +140,31 @@
         <img src="../images/image3.png" alt="line" class="img-first-line__img-line">
     </div>
     <div class="about-us">
-        <span class="about-us__color-for-about-us">About </span>Us<br><hr style="border: 1px solid red;">
+        <span class="about-us__color-for-about-us">About </span>Us<br>
+        <hr style="border: 1px solid red;">
         <div class="about-us__padding">
             Our <span class="about-us__color-for-about-us">team</span>
+        </div>
+    </div>
+    <div class="our-team-img">
+        <img src="../images/image4.png" class="our-team-img__main-img" alt="our team">
+    </div>
+    <div class="count-team">
+        <div class="count-team__border-right">
+            <span class="number-size">3360</span><br>
+            <span class="text-size">кг в среднем жмет сотрудник за тренировку</span>
+        </div>
+        <div class="count-team__border-right">
+            <span class="number-size__color">834</span><br>
+            <span class="text-size">кг в среднем жмет сотрудник за тренировку</span>
+        </div>
+        <div class="count-team__border-right">
+            <span class="number-size">1785</span><br>
+            <span class="text-size">кг в среднем жмет сотрудник за тренировку</span>
+        </div>
+        <div class="count-team__border-right">
+            <span class="number-size__color">124139155</span><br>
+            <span class="text-size">кг в среднем жмет сотрудник за тренировку</span>
         </div>
     </div>
 </body>
