--- a/main-page/main_page.html
+++ b/main-page/main_page.html
@@ -57,7 +57,7 @@
                 </div>
                 <nav class="header-cap__nav">
                     <div class="header-cap__about-us" id="header-cap__about-us">
-                        <a href="#" class="header-cap__link">
+                        <a href="#about-us" class="header-cap__link">
                             <span class="first-letter-style">A</span>bout
                             <span class="first-letter-style">U</span>s
                         </a>
@@ -89,7 +89,9 @@
             <h3 class="menu__name">Menu</h3>
             <hr>
             <div class="right-panel__container-items">
-                <div class="menu__item">About Us</div>
+                <a href="#about-us" class="links">
+                    <div class="menu__item">About Us</div>
+                </a>
                 <div class="menu__item">Blogs and news</div>
                 <div class="menu__item">Our partners</div>
                 <div class="menu__item">Supports servise</div>
@@ -136,13 +138,59 @@
             </div>
         </div>
     </div>
-    <div class="img-first-line">
+    <div class="img-line">
         <img src="../images/image3.png" alt="line" class="img-first-line__img-line">
     </div>
-    <div class="about-us">
-        <span class="about-us__color-for-about-us">About </span>Us<br><hr style="border: 1px solid red;">
+    <div class="about-us" id="about-us">
+        <span class="about-us__color-for-about-us">About </span>Us<br>
         <div class="about-us__padding">
-            Our <span class="about-us__color-for-about-us">team</span>
+            Our <span class="about-us__color-for-about-us">team is very friendly,
+                <span class="about-us__content-color">we will help you in any situation! Join US!</span></span>
+        </div>
+    </div>
+    <div class="our-team-img">
+        <img src="../images/image4.png" class="our-team-img__main-img" alt="our team">
+    </div>
+    <div class="count-team">
+        <div class="count-team__border-right">
+            <span class="number-size">3360</span><br>
+            <span class="text-size">кг в среднем жмет сотрудник за тренировку</span>
+        </div>
+        <div class="count-team__border-right">
+            <span class="number-size__color">834</span><br>
+            <span class="text-size">кг в среднем жмет сотрудник за тренировку</span>
+        </div>
+        <div class="count-team__border-right">
+            <span class="number-size">1785</span><br>
+            <span class="text-size">кг в среднем жмет сотрудник за тренировку</span>
+        </div>
+        <div class="count-team__border-right">
+            <span class="number-size__color">124139155</span><br>
+            <span class="text-size">кг в среднем жмет сотрудник за тренировку</span>
+        </div>
+    </div>
+    <div class="img-line">
+        <img src="../images/image3.png" alt="line" class="img-first-line__img-line">
+    </div>
+    <div class="news">News</div>
+    <div class="news-content">
+        <div class="new-content__block">
+            <img src="../news-inamges/news1.png" class="news-img">
+        </div>
+        <div class="new-content__block">
+            <img src="../news-inamges/news2.png" class="news-img">
+        </div>
+        <div class="new-content__block">
+            <img src="../news-inamges/news3.png" class="news-img">
+        </div>
+        <div class="new-content__block">
+            <img src="../news-inamges/news4.png" class="news-img">
+        </div>
+        <div class="new-content__block">
+            <img src="../news-inamges/news5.png" class="news-img">
+        </div>
+        <div class="new-content__block">
+            <img src="../news-inamges/news6.png" class="news-img">
         </div>
     </div>
 </body>
