--- a/main-page/main_page.html
+++ b/main-page/main_page.html
@@ -192,6 +192,7 @@
         <div class="new-content__block">
             <img src="../news-inamges/news6.png" class="news-img">
         </div>
+        <div>f</div>
     </div>
 </body>
 
