--- a/main-page/main_page.html
+++ b/main-page/main_page.html
@@ -108,7 +108,8 @@
     <div class="wrapper">
         <img src="../images/image.png" class="img" alt="main-page"></img>
         <div class="wrapper__why-we">
-            <div class="why-we__answer">Why we?</div>
+            <div class="why-we__answer">&lt<span class="color-for-script">script</span>&gtWhy we?&lt<span
+                    class="color-for-script">script</span>&gt</div>
             <div class="wrapper__block-1">
                 <div></div>
                 <div class="block-1">
@@ -146,6 +147,7 @@
         <div class="about-us__padding">
             Our <span class="about-us__color-for-about-us">team is very friendly,
                 <span class="about-us__content-color">we will help you in any situation! Join US!</span></span>
+            <hr class="horizontal_line">
         </div>
     </div>
     <div class="our-team-img">
@@ -172,7 +174,10 @@
     <div class="img-line">
         <img src="../images/image3.png" alt="line" class="img-first-line__img-line">
     </div>
-    <div class="news">News</div>
+    <div class="news">
+        <div class="news_content">News</div>
+        <hr class="horizontal_line">
+    </div>
     <div class="news-content">
         <div class="new-content__block">
             <img src="../news-inamges/news1.png" class="news-img">
@@ -192,7 +197,6 @@
         <div class="new-content__block">
             <img src="../news-inamges/news6.png" class="news-img">
         </div>
-        <div>f</div>
     </div>
 </body>
 
